IccProfLib/icProfileHeader.h

typedef ICUINT8TYPE          icUInt8Number;
typedef unsigned char        icUInt8Number;
typedef ICUINT16TYPE         icUInt16Number;
typedef unsigned short       icUInt16Number;
typedef ICUINT32TYPE         icUInt32Number;
typedef unsigned long        icUInt32Number;
typedef ICUINT64TYPE         icUInt64Number;
typedef icUInt32Number       icUInt64Number[2];
typedef icUInt32Number       icSignature;
typedef ICINT8TYPE           icInt8Number;
typedef char                 icInt8Number;
typedef ICINT32TYPE          icInt32Number;
typedef long                 icInt32Number;
typedef icInt32Number        icS15Fixed16Number;
typedef ICHALFFLOATTYPE icFloat16Number;
typedef icUInt16Number icFloat16Number;
typedef enum : uint32_t {
  icSigTrueVar                       = 0x74727565,  
  icSigNotDefVar                     = 0x6e646566,  
  icMaxCmmEnvVar                     = 0xFFFFFFFF,
}icSigCmmEnvVar;
typedef enum {
    icSigNoColorData                    = 0x00000000,
    icSigXYZData                        = 0x58595A20,  
    icSigLabData                        = 0x4C616220,  
    icSigLuvData                        = 0x4C757620,  
    icSigYCbCrData                      = 0x59436272,  
    icSigYxyData                        = 0x59787920,  
    icSigRgbData                        = 0x52474220,  
    icSigGrayData                       = 0x47524159,  
    icSigHsvData                        = 0x48535620,  
    icSigHlsData                        = 0x484C5320,  
    icSigCmykData                       = 0x434D594B,  
    icSigCmyData                        = 0x434D5920,  
    icSig1colorData                     = 0x31434C52,  
    icSig2colorData                     = 0x32434C52,  
    icSig3colorData                     = 0x33434C52,  
    icSig4colorData                     = 0x34434C52,  
    icSig5colorData                     = 0x35434C52,  
    icSig6colorData                     = 0x36434C52,  
    icSig7colorData                     = 0x37434C52,  
    icSig8colorData                     = 0x38434C52,  
    icSig9colorData                     = 0x39434C52,  
    icSig10colorData                    = 0x41434C52,  
    icSig11colorData                    = 0x42434C52,  
    icSig12colorData                    = 0x43434C52,  
    icSig13colorData                    = 0x44434C52,  
    icSig14colorData                    = 0x45434C52,  
    icSig15colorData                    = 0x46434C52,  
    icSigNamedData                      = 0x6e6d636c,  
    icSigMCH1Data                       = 0x31434C52,  
    icSigMCH2Data                       = 0x32434C52,          
    icSigMCH3Data                       = 0x33434C52,          
    icSigMCH4Data                       = 0x34434C52,          
    icSigMCH5Data                       = 0x35434C52,  
    icSigMCH6Data                       = 0x36434C52,  
    icSigMCH7Data                       = 0x37434C52,  
    icSigMCH8Data                       = 0x38434C52,  
    icSigMCH9Data                       = 0x39434C52,  
    icSigMCHAData                       = 0x41434C52,  
    icSigMCHBData                       = 0x42434C52,  
    icSigMCHCData                       = 0x43434C52,  
    icSigMCHDData                       = 0x44434C52,  
    icSigMCHEData                       = 0x45434C52,  
    icSigMCHFData                       = 0x46434C52,  
    icSigNChannelData                   = 0x6e630000,  
    icSigSrcMCSChannelData              = 0x6d630000,  
    icSigNoSpectralData                 = 0x00000000,
    icSigReflectanceSpectralData        = 0x72730000, 
    icSigTransmisionSpectralData        = 0x74730000, 
    icSigRadiantSpectralData            = 0x65730000, 
    icSigBiSpectralReflectanceData      = 0x62730000, 
    icSigSparseMatrixReflectanceData    = 0x736D0000, 
    icSigDevLabData = 0x644C6162,  
    icSigDevXYZData = 0x6458595A,  
    icSigGamutData = 0x67616D74,  
    icSigBRDFParameters  = 0x62700000,  
    icSigBRDFDirect = 0x62640000,  
    icSigUnknownData = 0x3f3f3f3f,  
    icMaxEnumData = 0xFFFFFFFF,
} icColorSpaceSignature;
typedef enum : icUInt32Number {
  icSigNoMCSData                 = 0x00000000,
  icSigMCSData                   = 0x6d630000,  
  icSigMCSDataEnd                = 0x6d63FFFF,   
  icSigMCSMaxEnumData            = 0xFFFFFFFF,
} icMultiplexColorSignature;
typedef enum {
    icSigInputClass                     = 0x73636E72,  
    icSigDisplayClass                   = 0x6D6E7472,  
    icSigOutputClass                    = 0x70727472,  
    icSigLinkClass                      = 0x6C696E6B,  
    icSigAbstractClass                  = 0x61627374,  
    icSigColorSpaceClass                = 0x73706163,  
    icSigNamedColorClass                = 0x6e6d636c,  
    icSigColorEncodingClass             = 0x63656e63,  
    icSigMultiplexIdentificationClass   = 0x6D696420,  
    icSigMultiplexLinkClass             = 0x6d6c6e6b,  
    icSigMultiplexVisualizationClass    = 0x6d766973,  
    icMaxEnumClass                      = 0xFFFFFFFF,
} icProfileClassSignature;
typedef enum {
    icSigMacintosh                      = 0x4150504C,  
    icSigMicrosoft                      = 0x4D534654,  
    icSigSolaris                        = 0x53554E57,  
    icSigSGI                            = 0x53474920,  
    icSigTaligent                       = 0x54474E54,  
    icSigUnknownPlatform                = 0x00000000,
    icMaxEnumPlatform                   = 0xFFFFFFFF,
} icPlatformSignature;
typedef enum {
    icPerceptual                        = 0,
    icRelativeColorimetric              = 1,
    icRelative                          = 1,
    icSaturation                        = 2,
    icAbsoluteColorimetric              = 3,
    icAbsolute                          = 3,
    icUnknownIntent                     = 0x3f3f3f3f,  
    icMaxEnumIntent                     = 0xFFFFFFFF,
} icRenderingIntent;
typedef struct {
    icUInt16Number      year;
    icUInt16Number      month;
    icUInt16Number      day;
    icUInt16Number      hours;
    icUInt16Number      minutes;
    icUInt16Number      seconds;
} icDateTimeNumber;
typedef struct {
    icS15Fixed16Number  X;
    icS15Fixed16Number  Y;
    icS15Fixed16Number  Z;
} icXYZNumber;
typedef struct {
  icFloat16Number start;
  icFloat16Number end;
  icUInt16Number steps;
} icSpectralRange;
typedef union {
    icUInt8Number         ID8[16];
    icUInt16Number        ID16[8];
    icUInt32Number        ID32[4];
} icProfileID;
typedef struct {
    icUInt32Number              size;             
    icSignature                 cmmId;            
    icUInt32Number              version;          
    icProfileClassSignature     deviceClass;      
    icColorSpaceSignature       colorSpace;       
    icColorSpaceSignature       pcs;              
    icDateTimeNumber            date;             
    icSignature                 magic;            
    icPlatformSignature         platform;         
    icUInt32Number              flags;            
    icSignature                 manufacturer;     
    icUInt32Number              model;            
    icUInt64Number              attributes;       
    icUInt32Number              renderingIntent;  
    icXYZNumber                 illuminant;       
    icSignature                 creator;          
    icProfileID                 profileID;        
    icColorSpaceSignature       spectralPCS;      
    icSpectralRange             spectralRange;    
    icSpectralRange             biSpectralRange;  
    icMultiplexColorSignature   mcs;              
    icSignature                 deviceSubClass;   
    icInt8Number                reserved[4];    
} icHeader;