IccProfLib/IccWrapper.h

typedef void CIccCmmHandle;
typedef void CIccApplyHandle;
typedef void CIccProfileHandle;
typedef struct {
  icColorSpaceSignature srcSpace;
  icColorSpaceSignature dstSpace;
  icUInt16Number srcSamples;
  icUInt16Number dstSamples;
} SIccCmmStruct;
typedef struct {
  icUInt32Number nVars;
  icSigCmmEnvVar *sigs;
  icFloat32Number *vals;
} SIccCmmEnvVars;
typedef unsigned char icBoolean;
ICCPROFLIB_API CIccCmmHandle* IccCmmCreate(icColorSpaceSignature srcSpace, icColorSpaceSignature dstSpace, icBoolean bFirstIsInput);
ICCPROFLIB_API icStatusCMM IccCmmAttachProfileFile(CIccCmmHandle *pCmm,
                                                   const char *szFname,
                                                   icRenderingIntent nIntent,
                                                   icXformInterp nInterp,
                                                   CIccProfileHandle *pPcc, 
                                                   icXformLutType nLutType,
                                                   icBoolean bUseDtoBTags,
                                                   icBoolean bUseBPC,
                                                   SIccCmmEnvVars *pVars); 
ICCPROFLIB_API icStatusCMM IccCmmAttachProfileHandle(CIccCmmHandle *pCmm,
                                                     CIccProfileHandle *pProfile, 
                                                     icRenderingIntent nIntent,
                                                     icXformInterp nInterp,
                                                     CIccProfileHandle *pPcc,
                                                     icXformLutType nLutType,
                                                     icBoolean bUseDtoBTags,
                                                     icBoolean bUseBPC,
                                                     SIccCmmEnvVars *pVars);
ICCPROFLIB_API icStatusCMM IccCmmBegin(CIccCmmHandle *pCmm);
ICCPROFLIB_API CIccApplyHandle* IccCmmGetApply(CIccCmmHandle *pCmm);
ICCPROFLIB_API icStatusCMM IccCmmGetInfo(CIccCmmHandle *pCmm, SIccCmmStruct *pCmmInfo);
ICCPROFLIB_API icStatusCMM IccCmmApplyFloat(CIccCmmHandle *pCmm, icFloatNumber *pTo, icFloatNumber *pFrom);
ICCPROFLIB_API icStatusCMM IccCmmApplyFloatMulti(CIccCmmHandle *pCmm, icFloatNumber *pTo, icFloatNumber *pFrom, icUInt32Number nPixels);
ICCPROFLIB_API void IccCmmFree(CIccCmmHandle *pCmm);
ICCPROFLIB_API icStatusCMM IccApplyApplyFloat(CIccApplyHandle *pApply, icFloatNumber *pTo, icFloatNumber *pFrom);
ICCPROFLIB_API icStatusCMM IccApplyApplyFloatMulti(CIccApplyHandle *pApply, icFloatNumber *pTo, icFloatNumber *pFrom, icUInt32Number nPixels);
ICCPROFLIB_API void IccApplyFree(CIccApplyHandle *pApply);
ICCPROFLIB_API CIccProfileHandle* IccProfileReadHandle(const char *szFname);
ICCPROFLIB_API CIccProfileHandle* IccProfileOpenHandle(const char *szFname);
ICCPROFLIB_API icBoolean IccProfileGetHeader(CIccProfileHandle *pProfile, icHeader *pHeader);
ICCPROFLIB_API void IccProfileFree(CIccProfileHandle *pProfile);