IccProfLib/IccCmm.h

  
typedef enum {
  icCmmStatBad                = -1,
  icCmmStatOk                 = 0,
  icCmmStatCantOpenProfile    = 1,
  icCmmStatBadSpaceLink       = 2,
  icCmmStatInvalidProfile     = 3,
  icCmmStatBadXform           = 4,
  icCmmStatInvalidLut         = 5,
  icCmmStatProfileMissingTag  = 6,
  icCmmStatColorNotFound      = 7,
  icCmmStatIncorrectApply     = 8,
  icCmmStatBadColorEncoding   = 9,
  icCmmStatAllocErr           = 10,
  icCmmStatBadLutType         = 11,
  icCmmStatIdentityXform      = 12,
  icCmmStatUnsupportedPcsLink = 13,
  icCmmStatBadConnection      = 14,
  icCmmStatBadTintXform       = 15,
  icCmmStatTooManySamples     = 16,
  icCmmStatBadMCSLink         = 17,
  icCmmStatUnsupported        = 18,
  icCmmStatUnsupportedProfileClass = 19,
  icCmmStatCantAdjustPcs           = 20,
} icStatusCMM;
typedef enum {
  icInterpLinear               = 0,
  icInterpTetrahedral          = 1,
} icXformInterp;
typedef enum {
  icXformLutColor              = 0x0,  
  icXformLutNamedColor         = 0x1,
  icXformLutPreview            = 0x2,
  icXformLutGamut              = 0x3,
  icXformLutBPC                = 0x4,
  icXformLutBRDFParam          = 0x5,
  icXformLutBRDFDirect         = 0x6,
  icXformLutBRDFMcsParam       = 0x7,
  icXformLutMCS                = 0x8,
  icXformLutColorimetric       = 0x9,
  icXformLutSpectral           = 0xA,
  icXformLutNamedColorimetric  = 0xB,
  icXformLutNamedSpectral      = 0xC,
  icXformLutNamedDevice        = 0xD,
  icXformLutMinimum = 0x0,              
  icXformLutMaximum = 0xD,              
 } icXformLutType;